mpi: Allow building with --disable-asm for HPPA.

* mpi/longlong.h [__hppa] (udiv_qrnnd): Only define
when assembler is enabled.

--

Cherry-picked form master commit of:
	c0692324fe8b3806eefc5017767917dca9cd94d0

GnuPG-bug-id: 5976
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>